# wasm-template-rs

./: Cargo.toml  README.md  index.html  index.js  package.json  webpack.config.js
src/: lib.rs
