[package]
name = "wgpuwasm"
version = "0.0.1"
authors = ["Jason Rowland"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[target.wasm32-unknown-unknown]
rustflags = ["web_sys_unstable_apis"]

[features]
# If you uncomment this line, it will enable `wee_alloc`:
default = ["wee_alloc"]

[dependencies]
console_error_panic_hook = "0.1.6"
js-sys = "0.3.53"
lazy_static = "1.4.0"
wee_alloc = { version = "0.4.5", optional = true }
nalgebra = "0.29.0"
wasm-bindgen = "0.2.76"

# The `web-sys` crate allows you to interact with the various browser APIs,
# like the DOM.
[dependencies.web-sys]
version = "0.3.53"
features = [
  'console',
  'Document',
  'Element',
  'EventTarget',
  'HtmlCanvasElement',
  'MouseEvent',
  'WebGlBuffer',
  'WebGlProgram',
  'WebGlRenderingContext',
  'WebGlShader',
  'WebGlUniformLocation',
  'Window',
]

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so it's only enabled
# in debug mode.


[profile.release]
# This makes the compiled code faster and smaller, but it makes compiling slower,
# so it's only enabled in release mode.
lto = true

# These crates are used for running unit tests.
[dev-dependencies]
wasm-bindgen-test = "0.2"
futures = "0.3"
js-sys = "0.3.53"
wasm-bindgen-futures = "0.3"
